updated footer script

--- a/customer-service.html
+++ b/customer-service.html
@@ -49,9 +49,12 @@
       <a href="https://linkedin.com/company/topnotchva" target="_blank">LinkedIn</a>
     </div>
   </footer>
-    <script>
+  
+  <script>
   function toggleMenu() {
     document.getElementById("hamburgerMenu").classList.toggle("show");
   }
+</script>
+
 </body>
 </html>
