--- a/customer-service.html
+++ b/customer-service.html
@@ -13,6 +13,17 @@
   <link rel="stylesheet" href="css/styles.css" />
   <link rel="icon" href="images/favicon.ico" />
   <title>Customer Service | Top Notch Virtual Assistance</title>
+  
+  	<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-TNZPH5F6MK"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-TNZPH5F6MK');
+</script>
+  
 </head>
 <body>
 	<header class="header-centered">
