--- a/thank-you.html
+++ b/thank-you.html
@@ -20,6 +20,17 @@
       text-decoration: underline;
     }
   </style>
+  
+  	<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-TNZPH5F6MK"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-TNZPH5F6MK');
+</script>
+  
 </head>
 <body>
   <h1>Thank You!</h1>
