--- a/customer-service.html
+++ b/customer-service.html
@@ -13,31 +13,30 @@
   <link rel="stylesheet" href="css/styles.css" />
   <link rel="icon" href="images/favicon.ico" />
   <title>Customer Service | Top Notch Virtual Assistance</title>
-  
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-TNZPH5F6MK"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
 
-  gtag('config', 'G-TNZPH5F6MK');
-</script>
-  
+  <!-- Google tag -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-TNZPH5F6MK"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-TNZPH5F6MK');
+  </script>
 </head>
 <body>
-	<header class="header-centered">
-	  <img src="images/TopNotch_Main2.png" alt="Page Icon" class="main-logo" />
-	  <div class="hamburger-header">
-		<button class="hamburger-btn" onclick="toggleMenu()">☰ Menu</button>
-		<nav class="hamburger-nav" id="hamburgerMenu">
-		  <a href="index.html">Home</a>
-		  <a href="executive-assistance.html">Executive Assistance</a>
-		  <a href="customer-service.html">Customer Service</a>
-		  <a href="marketing-support.html">Marketing Support</a>
-		</nav>
-	  </div>
-	</header>
+  <header class="header-centered">
+    <img src="images/TopNotch_Main2.png" alt="Page Icon" class="main-logo" />
+    <div class="hamburger-header">
+      <button class="hamburger-btn" onclick="toggleMenu()">☰ Menu</button>
+      <nav class="hamburger-nav" id="hamburgerMenu">
+        <a href="index.html">Home</a>
+        <a href="executive-assistance.html">Executive Assistance</a>
+        <a href="customer-service.html">Customer Service</a>
+        <a href="marketing-support.html">Marketing Support</a>
+        <a href="contact.html">Contact</a>
+      </nav>
+    </div>
+  </header>
 
   <main class="services">
     <h2>Virtual Customer Service Support</h2>
@@ -60,12 +59,11 @@
       <a href="https://linkedin.com/company/topnotchva" target="_blank">LinkedIn</a>
     </div>
   </footer>
-  
-  <script>
-  function toggleMenu() {
-    document.getElementById("hamburgerMenu").classList.toggle("show");
-  }
-</script>
 
+  <script>
+    function toggleMenu() {
+      document.getElementById("hamburgerMenu").classList.toggle("show");
+    }
+  </script>
 </body>
 </html>
