--- a/index.html
+++ b/index.html
@@ -14,17 +14,15 @@
   <link rel="stylesheet" href="css/styles.css">
   <link rel="icon" href="images/favicon.ico">
   <title>Top Notch Virtual Assistance</title>
-  
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-TNZPH5F6MK"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
 
-  gtag('config', 'G-TNZPH5F6MK');
-</script>
-  
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-TNZPH5F6MK"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-TNZPH5F6MK');
+  </script>
 </head>
 <body>
 
@@ -37,6 +35,7 @@
         <a href="executive-assistance.html">Executive Assistance</a>
         <a href="customer-service.html">Customer Service</a>
         <a href="marketing-support.html">Marketing Support</a>
+        <a href="contact.html">Contact</a>
       </nav>
     </div>
   </header>
@@ -79,17 +78,6 @@
         <h4>- Lisa B., Startup Co-Founder</h4>
       </div>
     </section>
-
-    <section id="contact" class="contact-section">
-      <h2>Contact Us</h2>
-      <form action="https://formsubmit.co/lmoore0510@gmail.com" method="POST" class="contact-form">
-        <input type="hidden" name="_redirect" value="https://topnotchsolutions.github.io/thank-you.html" />
-        <input type="text" name="name" placeholder="Your Name" required />
-        <input type="email" name="email" placeholder="Your Email" required />
-        <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
-        <button type="submit">Send</button>
-      </form>
-    </section>
   </main>
 
   <footer>
@@ -106,27 +94,6 @@
       document.getElementById("hamburgerMenu").classList.toggle("show");
     }
   </script>
-  
-  <script>
-  let scrollTracked = {50: false, 75: false, 100: false};
 
-  window.addEventListener('scroll', function () {
-    const scrollTop = window.scrollY;
-    const docHeight = document.documentElement.scrollHeight - window.innerHeight;
-    const scrollPercent = Math.round((scrollTop / docHeight) * 100);
-
-    [50, 75, 100].forEach(percent => {
-      if (!scrollTracked[percent] && scrollPercent >= percent) {
-        gtag('event', 'scroll_depth', {
-          'event_category': 'Engagement',
-          'event_label': percent + '% Scroll'
-        });
-        scrollTracked[percent] = true;
-      }
-    });
-  });
-</script>
-
-  
 </body>
 </html>
