--- a/marketing-support.html
+++ b/marketing-support.html
@@ -35,10 +35,10 @@
 		  <a href="executive-assistance.html">Executive Assistance</a>
 		  <a href="customer-service.html">Customer Service</a>
 		  <a href="marketing-support.html">Marketing Support</a>
+		  <a href="contact.html">Contact</a>
 		</nav>
 	  </div>
 	</header>
-
 
   <main class="services">
     <h2>Virtual Marketing Support Assistance</h2>
