added sitemap and robots

--- a/marketing-support.html
+++ b/marketing-support.html
@@ -5,14 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Virtual marketing assistants to manage your brand presence, create content, and build leads through email, social media, and campaigns.">
   <meta name="keywords" content="marketing assistant, social media VA, content marketing, email campaigns, Canva graphics, digital marketing support">
-  <meta name="author" content="Top Notch Virtual Assistance" />
+  <meta name="author" content="Notably VA" />
   <meta property="og:title" content="Marketing Support | Virtual Assistants for Branding" />
   <meta property="og:description" content="Boost your visibility and leads with creative, reliable, and affordable marketing support tailored to your business.">
   <meta property="og:image" content="images/marketing-support.png" />
-  <meta property="og:url" content="https://top-notch-solutions.com/marketing-support.html" />
+  <meta property="og:url" content="https://notablyva.com/marketing-support.html" />
   <link rel="stylesheet" href="css/styles.css" />
   <link rel="icon" href="images/favicon.ico" />
-  <title>Marketing Support | Top Notch Virtual Assistance</title>
+  <title>Marketing Support | Notably VA</title>
   
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-TNZPH5F6MK"></script>
@@ -27,7 +27,7 @@
 </head>
 <body>
 	<header class="header-centered">
-	  <img src="images/TopNotch_Main2.png" alt="Page Icon" class="main-logo" />
+	  <img src="images/notablyva.png" alt="Page Icon" class="main-logo" />
 	  <div class="hamburger-header">
 		<button class="hamburger-btn" onclick="toggleMenu()">☰ Menu</button>
 		<nav class="hamburger-nav" id="hamburgerMenu">
@@ -35,10 +35,10 @@
 		  <a href="executive-assistance.html">Executive Assistance</a>
 		  <a href="customer-service.html">Customer Service</a>
 		  <a href="marketing-support.html">Marketing Support</a>
+		  <a href="contact.html">Contact</a>
 		</nav>
 	  </div>
 	</header>
-
 
   <main class="services">
     <h2>Virtual Marketing Support Assistance</h2>
@@ -54,11 +54,11 @@
   </main>
 
   <footer>
-    <p>&copy; 2025 Top Notch Virtual Assistance</p>
+    <p>&copy; 2025 Notably VA</p>
     <div class="social">
-      <a href="https://facebook.com/TopNotchVA" target="_blank">Facebook</a> |
-      <a href="https://instagram.com/TopNotchVA" target="_blank">Instagram</a> |
-      <a href="https://linkedin.com/company/topnotchva" target="_blank">LinkedIn</a>
+      <a href="https://facebook.com/NotablyVA" target="_blank">Facebook</a> |
+      <a href="https://instagram.com/NotablyVA" target="_blank">Instagram</a> |
+      <a href="https://linkedin.com/company/notablyva" target="_blank">LinkedIn</a>
     </div>
   </footer>
   
