--- a/customer-service.html
+++ b/customer-service.html
@@ -5,39 +5,38 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Customer service virtual assistants to support email, chat, CRM, order issues, and customer satisfaction follow-ups.">
   <meta name="keywords" content="customer service VA, live chat support, remote help desk, email customer service, CRM assistant, client care">
-  <meta name="author" content="Top Notch Virtual Assistance" />
-  <meta property="og:title" content="Customer Service Virtual Assistants | Top Notch VA" />
+  <meta name="author" content="Notably VA" />
+  <meta property="og:title" content="Customer Service Virtual Assistants | Notably VA" />
   <meta property="og:description" content="Friendly, fast, and professional virtual support that keeps your customers happy and loyal.">
   <meta property="og:image" content="images/customer-service.png" />
-  <meta property="og:url" content="https://top-notch-solutions.com/customer-service.html" />
+  <meta property="og:url" content="https://notablyva.com/customer-service.html" />
   <link rel="stylesheet" href="css/styles.css" />
   <link rel="icon" href="images/favicon.ico" />
-  <title>Customer Service | Top Notch Virtual Assistance</title>
-  
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-TNZPH5F6MK"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <title>Customer Service | Notably VA</title>
 
-  gtag('config', 'G-TNZPH5F6MK');
-</script>
-  
+  <!-- Google tag -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-TNZPH5F6MK"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-TNZPH5F6MK');
+  </script>
 </head>
 <body>
-	<header class="header-centered">
-	  <img src="images/TopNotch_Main2.png" alt="Page Icon" class="main-logo" />
-	  <div class="hamburger-header">
-		<button class="hamburger-btn" onclick="toggleMenu()">☰ Menu</button>
-		<nav class="hamburger-nav" id="hamburgerMenu">
-		  <a href="index.html">Home</a>
-		  <a href="executive-assistance.html">Executive Assistance</a>
-		  <a href="customer-service.html">Customer Service</a>
-		  <a href="marketing-support.html">Marketing Support</a>
-		</nav>
-	  </div>
-	</header>
+  <header class="header-centered">
+    <img src="images/notablyva.png" alt="Page Icon" class="main-logo" />
+    <div class="hamburger-header">
+      <button class="hamburger-btn" onclick="toggleMenu()">☰ Menu</button>
+      <nav class="hamburger-nav" id="hamburgerMenu">
+        <a href="index.html">Home</a>
+        <a href="executive-assistance.html">Executive Assistance</a>
+        <a href="customer-service.html">Customer Service</a>
+        <a href="marketing-support.html">Marketing Support</a>
+        <a href="contact.html">Contact</a>
+      </nav>
+    </div>
+  </header>
 
   <main class="services">
     <h2>Virtual Customer Service Support</h2>
@@ -53,19 +52,18 @@
   </main>
 
   <footer>
-    <p>&copy; 2025 Top Notch Virtual Assistance</p>
+    <p>&copy; 2025 Notably VA</p>
     <div class="social">
-      <a href="https://facebook.com/TopNotchVA" target="_blank">Facebook</a> |
-      <a href="https://instagram.com/TopNotchVA" target="_blank">Instagram</a> |
-      <a href="https://linkedin.com/company/topnotchva" target="_blank">LinkedIn</a>
+      <a href="https://facebook.com/NotablyVA" target="_blank">Facebook</a> |
+      <a href="https://instagram.com/NotablyVA" target="_blank">Instagram</a> |
+      <a href="https://linkedin.com/company/notablyva" target="_blank">LinkedIn</a>
     </div>
   </footer>
-  
-  <script>
-  function toggleMenu() {
-    document.getElementById("hamburgerMenu").classList.toggle("show");
-  }
-</script>
 
+  <script>
+    function toggleMenu() {
+      document.getElementById("hamburgerMenu").classList.toggle("show");
+    }
+  </script>
 </body>
 </html>
