--- a/executive-assistance.html
+++ b/executive-assistance.html
@@ -5,40 +5,39 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Reliable executive virtual assistant services for busy professionals, founders, and business leaders. Stay organized, productive, and ahead of schedule.">
   <meta name="keywords" content="executive assistant, virtual admin, inbox management, calendar scheduling, remote executive support, VA for executives">
-  <meta name="author" content="Top Notch Virtual Assistance" />
-  <meta property="og:title" content="Executive Virtual Assistant Services | Top Notch VA" />
+  <meta name="author" content="Notably VA" />
+  <meta property="og:title" content="Executive Virtual Assistant Services | Notably VA" />
   <meta property="og:description" content="Streamline your operations with experienced virtual executive assistants. Calendar, inbox, travel & beyond.">
   <meta property="og:image" content="images/executive-assistance.png" />
-  <meta property="og:url" content="https://top-notch-solutions.com/executive-assistance.html" />
+  <meta property="og:url" content="https://notablyva.com/executive-assistance.html" />
   <link rel="stylesheet" href="css/styles.css" />
   <link rel="icon" href="images/favicon.ico" />
-  <title>Executive Assistance | Top Notch Virtual Assistance</title>
-  
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-TNZPH5F6MK"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <title>Executive Assistance | Notably VA</title>
 
-  gtag('config', 'G-TNZPH5F6MK');
-</script>
-
- 
+  <!-- Google tag -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-TNZPH5F6MK"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-TNZPH5F6MK');
+  </script>
 </head>
 <body>
-	<header class="header-centered">
-	  <img src="images/TopNotch_Main2.png" alt="Page Icon" class="main-logo" />
-	  <div class="hamburger-header">
-		<button class="hamburger-btn" onclick="toggleMenu()">☰ Menu</button>
-		<nav class="hamburger-nav" id="hamburgerMenu">
-		  <a href="index.html">Home</a>
-		  <a href="executive-assistance.html">Executive Assistance</a>
-		  <a href="customer-service.html">Customer Service</a>
-		  <a href="marketing-support.html">Marketing Support</a>
-		</nav>
-	  </div>
-	</header>
+  <header class="header-centered">
+    <img src="images/TopNotch_Main2.png" alt="Page Icon" class="main-logo" />
+    <img src="images/notablyva.png" alt="Page Icon" class="main-logo" />
+    <div class="hamburger-header">
+      <button class="hamburger-btn" onclick="toggleMenu()">☰ Menu</button>
+      <nav class="hamburger-nav" id="hamburgerMenu">
+        <a href="index.html">Home</a>
+        <a href="executive-assistance.html">Executive Assistance</a>
+        <a href="customer-service.html">Customer Service</a>
+        <a href="marketing-support.html">Marketing Support</a>
+        <a href="contact.html">Contact</a>
+      </nav>
+    </div>
+  </header>
 
   <main class="services">
     <h2>Virtual Executive Assistance Services</h2>
@@ -54,19 +53,18 @@
   </main>
 
   <footer>
-    <p>&copy; 2025 Top Notch Virtual Assistance</p>
+    <p>&copy; 2025 Notably VA</p>
     <div class="social">
-      <a href="https://facebook.com/TopNotchVA" target="_blank">Facebook</a> |
-      <a href="https://instagram.com/TopNotchVA" target="_blank">Instagram</a> |
-      <a href="https://linkedin.com/company/topnotchva" target="_blank">LinkedIn</a>
+      <a href="https://facebook.com/NotablyVA" target="_blank">Facebook</a> |
+      <a href="https://instagram.com/NotablyVA" target="_blank">Instagram</a> |
+      <a href="https://linkedin.com/company/notablyva" target="_blank">LinkedIn</a>
     </div>
   </footer>
-  
-  <script>
-  function toggleMenu() {
-    document.getElementById("hamburgerMenu").classList.toggle("show");
-  }
-</script>
 
+  <script>
+    function toggleMenu() {
+      document.getElementById("hamburgerMenu").classList.toggle("show");
+    }
+  </script>
 </body>
 </html>
