--- a/index.html
+++ b/index.html
@@ -3,33 +3,31 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Top Notch Virtual Assistance specializes in executive support, customer service, and marketing help for small businesses, startups, and busy professionals.">
+  <meta name="description" content="Notably Virtual Assistance specializes in executive support, customer service, and marketing help for small businesses, startups, and busy professionals.">
   <meta name="keywords" content="virtual assistant, executive assistant, customer service, marketing support, remote admin, inbox management, calendar scheduling">
-  <meta name="author" content="Top Notch Solutions">
-  <meta property="og:title" content="Top Notch Virtual Assistance | Executive & Customer Support">
+  <meta name="author" content="Notably VA">
+  <meta property="og:title" content="Notably VA | Executive & Customer Support">
   <meta property="og:description" content="Reliable virtual assistant services for executives, entrepreneurs, and remote teams.">
   <meta property="og:type" content="website">
-  <meta property="og:image" content="images/TopNotch_Main2.png">
-  <meta property="og:url" content="https://top-notch-solutions.com">
+  <meta property="og:image" content="images/notablyva.png">
+  <meta property="og:url" content="https://notablyva.com">
   <link rel="stylesheet" href="css/styles.css">
   <link rel="icon" href="images/favicon.ico">
-  <title>Top Notch Virtual Assistance</title>
-  
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-TNZPH5F6MK"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <title>Notably VA</title>
 
-  gtag('config', 'G-TNZPH5F6MK');
-</script>
-  
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-TNZPH5F6MK"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-TNZPH5F6MK');
+  </script>
 </head>
 <body>
 
   <header class="header-centered">
-    <img src="images/TopNotch_Main2.png" alt="Top Notch Logo" class="main-logo">
+    <img src="images/notablyva.png" alt="Notably VA Logo" class="main-logo">
     <div class="hamburger-header">
       <button class="hamburger-btn" onclick="toggleMenu()">☰ Menu</button>
       <nav class="hamburger-nav" id="hamburgerMenu">
@@ -37,6 +35,7 @@
         <a href="executive-assistance.html">Executive Assistance</a>
         <a href="customer-service.html">Customer Service</a>
         <a href="marketing-support.html">Marketing Support</a>
+        <a href="contact.html">Contact</a>
       </nav>
     </div>
   </header>
@@ -67,7 +66,7 @@
     <section id="testimonials">
       <h2>What Our Clients Say</h2>
       <div class="testimonial">
-        <p>“Top Notch Virtual Assistance helped me take control of my schedule — truly a game-changer!”</p>
+        <p>“Notably VA helped me take control of my schedule — truly a game-changer!”</p>
         <h4>- Sarah D., Small Business Owner</h4>
       </div>
       <div class="testimonial">
@@ -79,25 +78,14 @@
         <h4>- Lisa B., Startup Co-Founder</h4>
       </div>
     </section>
-
-    <section id="contact" class="contact-section">
-      <h2>Contact Us</h2>
-      <form action="https://formsubmit.co/lmoore0510@gmail.com" method="POST" class="contact-form">
-        <input type="hidden" name="_redirect" value="https://topnotchsolutions.github.io/thank-you.html" />
-        <input type="text" name="name" placeholder="Your Name" required />
-        <input type="email" name="email" placeholder="Your Email" required />
-        <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
-        <button type="submit">Send</button>
-      </form>
-    </section>
   </main>
 
   <footer>
-    <p>&copy; 2025 Top Notch Virtual Assistance</p>
+    <p>&copy; 2025 Notably VA</p>
     <div class="social">
-      <a href="https://facebook.com/TopNotchVA" target="_blank">Facebook</a> |
-      <a href="https://instagram.com/TopNotchVA" target="_blank">Instagram</a> |
-      <a href="https://linkedin.com/company/topnotchva" target="_blank">LinkedIn</a>
+      <a href="https://facebook.com/NotablyVA" target="_blank">Facebook</a> |
+      <a href="https://instagram.com/NotablyVA" target="_blank">Instagram</a> |
+      <a href="https://linkedin.com/company/notablyva" target="_blank">LinkedIn</a>
     </div>
   </footer>
 
@@ -106,27 +94,6 @@
       document.getElementById("hamburgerMenu").classList.toggle("show");
     }
   </script>
-  
-  <script>
-  let scrollTracked = {50: false, 75: false, 100: false};
 
-  window.addEventListener('scroll', function () {
-    const scrollTop = window.scrollY;
-    const docHeight = document.documentElement.scrollHeight - window.innerHeight;
-    const scrollPercent = Math.round((scrollTop / docHeight) * 100);
-
-    [50, 75, 100].forEach(percent => {
-      if (!scrollTracked[percent] && scrollPercent >= percent) {
-        gtag('event', 'scroll_depth', {
-          'event_category': 'Engagement',
-          'event_label': percent + '% Scroll'
-        });
-        scrollTracked[percent] = true;
-      }
-    });
-  });
-</script>
-
-  
 </body>
 </html>
