--- a/customer-service.html
+++ b/customer-service.html
@@ -15,12 +15,12 @@
   <title>Customer Service | Notably VA</title>
 
   <!-- Google tag -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-TNZPH5F6MK"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-PK8VR84T24"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-    gtag('config', 'G-TNZPH5F6MK');
+    gtag('config', 'G-PK8VR84T24');
   </script>
 </head>
 <body>
