--- a/executive-assistance.html
+++ b/executive-assistance.html
@@ -15,17 +15,16 @@
   <title>Executive Assistance | Notably VA</title>
 
   <!-- Google tag -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-TNZPH5F6MK"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-PK8VR84T24"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-    gtag('config', 'G-TNZPH5F6MK');
+    gtag('config', 'G-PK8VR84T24');
   </script>
 </head>
 <body>
   <header class="header-centered">
-    <img src="images/TopNotch_Main2.png" alt="Page Icon" class="main-logo" />
     <img src="images/notablyva.png" alt="Page Icon" class="main-logo" />
     <div class="hamburger-header">
       <button class="hamburger-btn" onclick="toggleMenu()">☰ Menu</button>
