--- a/marketing-support.html
+++ b/marketing-support.html
@@ -27,7 +27,7 @@
 </head>
 <body>
 	<header class="header-centered">
-	  <img src="images/notablyva.png" alt="Page Icon" class="main-logo" />
+	  <img src="images/marketing-support.png" alt="Page Icon" class="main-logo" />
 	  <div class="hamburger-header">
 		<button class="hamburger-btn" onclick="toggleMenu()">☰ Menu</button>
 		<nav class="hamburger-nav" id="hamburgerMenu">
