--- a/executive-assistance.html
+++ b/executive-assistance.html
@@ -25,7 +25,7 @@
 </head>
 <body>
   <header class="header-centered">
-    <img src="images/notablyva.png" alt="Page Icon" class="main-logo" />
+    <img src="images/executive-assistance.png" alt="Page Icon" class="main-logo" />
     <div class="hamburger-header">
       <button class="hamburger-btn" onclick="toggleMenu()">☰ Menu</button>
       <nav class="hamburger-nav" id="hamburgerMenu">
