updated logo and slogan in index.html

--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Notably Virtual Assistance specializes in executive support, customer service, and marketing help for small businesses, startups, and busy professionals.">
-  <meta name="keywords" content="virtual assistant, executive assistant, customer service, marketing support, remote admin, inbox management, calendar scheduling">
-  <meta name="author" content="Notably VA">
-  <meta property="og:title" content="Notably VA | Executive & Customer Support">
-  <meta property="og:description" content="Reliable virtual assistant services for executives, entrepreneurs, and remote teams.">
-  <meta property="og:type" content="website">
-  <meta property="og:image" content="images/notablyva.png">
-  <meta property="og:url" content="https://notablyva.com">
-  <link rel="stylesheet" href="css/styles.css">
-  <link rel="icon" href="images/favicon.ico">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Notably Virtual Assistance specializes in executive support, customer service, and marketing help for small businesses, startups, and busy professionals." />
+  <meta name="keywords" content="virtual assistant, executive assistant, customer service, marketing support, remote admin, inbox management, calendar scheduling" />
+  <meta name="author" content="Notably VA" />
+  <meta property="og:title" content="Notably VA | Executive & Customer Support" />
+  <meta property="og:description" content="Reliable virtual assistant services for executives, entrepreneurs, and remote teams." />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="images/notablyva.png" />
+  <meta property="og:url" content="https://notablyva.com" />
+  <link rel="stylesheet" href="css/styles.css" />
+  <link rel="icon" href="images/favicon.ico" />
   <title>Notably VA</title>
 
   <!-- Google tag (gtag.js) -->
@@ -23,10 +23,16 @@
     gtag('js', new Date());
     gtag('config', 'G-PK8VR84T24');
   </script>
-<body>
 
+<body>
   <header class="header-centered">
-    <img src="images/notablyva.png" alt="Notably VA Logo" class="main-logo">
+    <img src="images/notablyva.png" alt="Notably VA Logo" class="main-logo" />
+    
+    <!-- Slogan -->
+    <p style="text-align: center; font-size: 1.1rem; color: #444; margin: 0.5rem 0 1.5rem;">
+      <em>Professional, Polished, and Notably Yours.</em>
+    </p>
+
     <div class="hamburger-header">
       <button class="hamburger-btn" onclick="toggleMenu()">☰ Menu</button>
       <nav class="hamburger-nav" id="hamburgerMenu">
@@ -43,19 +49,19 @@
     <h2 style="text-align: center; margin-top: 2rem; color: #222;">Our Services</h2>
     <section class="services-section">
       <div class="service-card">
-        <img src="images/executive-assistance.png" alt="Executive Assistance Icon" class="service-icon">
+        <img src="images/executive-assistance.png" alt="Executive Assistance Icon" class="service-icon" />
         <div class="service-title">Executive Assistance</div>
         <p class="service-description">Efficient daily operations, professional correspondence, and administrative organization.</p>
         <a href="executive-assistance.html" class="learn-more">Learn more</a>
       </div>
       <div class="service-card">
-        <img src="images/customer-service.png" alt="Customer Service Icon" class="service-icon">
+        <img src="images/customer-service.png" alt="Customer Service Icon" class="service-icon" />
         <div class="service-title">Customer Service</div>
         <p class="service-description">Client engagement, service coordination, and proactive problem-solving.</p>
         <a href="customer-service.html" class="learn-more">Learn more</a>
       </div>
       <div class="service-card">
-        <img src="images/marketing-support.png" alt="Marketing Support Icon" class="service-icon">
+        <img src="images/marketing-support.png" alt="Marketing Support Icon" class="service-icon" />
         <div class="service-title">Marketing Support</div>
         <p class="service-description">Social media, email campaigns, content creation, and lead generation support tailored to your brand.</p>
         <a href="marketing-support.html" class="learn-more">Learn more</a>
