--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,17 @@
   <title>Contact Us | Notably VA</title>
   <link rel="stylesheet" href="css/styles.css" />
   <link rel="icon" href="images/favicon.ico" />
+  
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-PK8VR84T24"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-PK8VR84T24');
+</script>
+  
 </head>
 <body>
   <header class="header-centered">
